--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/websocket": "0.0.40",
+    "nodemon": "^1.18.6",
     "typescript": "^3.1.6"
   },
   "dependencies": {
