--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "build": "tsc",
     "tsc-watch": "tsc --watch",
     "start": "node dist/main",
-    "dev": "node ./node_modules/nodemon/bin/nodemon.js"
+    "dev": "node ./node_modules/nodemon/bin/nodemon.js",
+    "test": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/websocket": "0.0.40",
-    "nodemon": "^1.18.6",
-    "typescript": "^3.1.6"
+    "@types/jest": "^24.0.13",
+    "@types/node": "^11.12.2",
+    "@types/string-similarity": "^3.0.0",
+    "@types/ws": "^6.0.1",
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.1",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.1"
   },
   "dependencies": {
-    "@types/string-similarity": "^1.2.0",
     "axios": "^0.18.0",
-    "rxjs": "^6.3.3",
-    "string-similarity": "^2.0.0",
-    "websocket": "^1.0.28"
+    "rxjs": "^6.5.2",
+    "string-similarity": "^3.0.0",
+    "ws": "^7.0.0"
   }
 }
